@@ -2,6 +2,8 @@ Revision history for Fork-Event-Interval
 
 1.01 UNREL
         - If interval is set to zero, we'll run only once
+        - Added IPC::Shareable as prerequisite
+        - Added waiting(), checks to see if an event is ready to start/restart
 
 1.00    2018-01-23
         - modified t/15-interval.t with some timing changes to prevent CPAN
